2002-01-20  Bruno Haible  <bruno@clisp.org>

	* libtool.m4 (_LT_AC_LTCONFIG_HACK): Remove two temporary files after
	use.

2002-01-19  Bruno Haible  <bruno@clisp.org>

	* iconv.m4 (AM_ICONV_LINK): New macro, extracted from AM_ICONV.
	(AM_ICONV): Call it.
	* gettext.m4 (AM_GNU_GETTEXT): Call AM_ICONV_LINK instead of AM_ICONV.

2002-01-19  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_GNU_GETTEXT): Don't consider that -liconv is
	necessary for -lintl. Instead, use the $LIBICONV value determined by
	the AM_ICONV macro.

2002-01-19  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_GNU_GETTEXT): Remove shortcut check for <libintl.h>.

2002-01-18  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_PO_SUBDIRS): Split preprocessing of POTFILES.in into
	two separate sed calls, otherwise the backslash that terminates the
	last line doesn't get removed if the last line of POTFILES.in is a
	comment line or a blank line.

2002-01-18  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_PO_SUBDIRS): Improve "found msgfmt program" message.

2002-01-13  Bruno Haible  <bruno@clisp.org>

	* *.m4: Add copyright notice.
	* hostname.m4: Quote first argument of AC_DEFUN.

2002-01-13  Bruno Haible  <bruno@clisp.org>

	* lib-link.m4 (AC_LIB_LINKFLAGS): Avoid macro interaction with
	AC_LIB_LINKFLAGS_BODY. Undefine the macros after use.
	(AC_LIB_HAVE_LINKFLAGS): New macro.

2002-01-13  Bruno Haible  <bruno@clisp.org>

	* lib-link.m4 (AC_LIB_LINKFLAGS): Fix mistake.

2002-01-12  Bruno Haible  <bruno@clisp.org>

	* libtool.m4: Add support for Intel icc.

2002-01-12  Bruno Haible  <bruno@clisp.org>

	* lib-prefix.m4 (AC_LIB_PREPARE_PREFIX): Fix shell programming mistake.
	(AC_LIB_WITH_FINAL_PREFIX): New macro.
	(AC_LIB_PREFIX): Use AC_LIB_WITH_FINAL_PREFIX. Remove
	acl_final_exec_prefix assignment already done in AC_LIB_PREPARE_PREFIX.
	* lib-link.m4 (AC_LIB_LINKFLAGS_BODY): Use AC_LIB_WITH_FINAL_PREFIX.
	(AC_LIB_APPENDTOVAR): Likewise.

2002-01-12  Bruno Haible  <bruno@clisp.org>
